	PR python/14635: 	* python/py-symtab.c (del_objfile_sal): Set 'symtab' field 	to Py_None. testsuite 	* gdb.python/py-symtab.exp: Test sal and symtab destructors.